--- a/CarAccountingGibdd/CarAccountingGibdd/Pages/PagesInspector/VehiclePageInspector.xaml
+++ b/CarAccountingGibdd/CarAccountingGibdd/Pages/PagesInspector/VehiclePageInspector.xaml
@@ -59,11 +59,19 @@
                 <DataGrid Name="itemsDG">
                     <DataGrid.Columns>
                         <DataGridTextColumn Header="ВИН" Binding="{Binding Vin}"/>
-                        <DataGridTextColumn Header="Номерной знак" Binding="{Binding LicensePlate, TargetNullValue='Отсутствует'}"/>
+                        <DataGridTextColumn Header="Номерной знак" Binding="{Binding LicensePlateValue, Mode=OneWay}"/>
                         <DataGridTextColumn Header="Марка" Binding="{Binding Brand}"/>
                         <DataGridTextColumn Header="Модель" Binding="{Binding Model}"/>
                         <DataGridTextColumn Header="Цвет" Binding="{Binding Color}"/>
                         <DataGridTextColumn Header="Год выпуска" Binding="{Binding Year, StringFormat={}{0} г.}"/>
+                        <DataGridTextColumn Header="Тип" Binding="{Binding VehicleType.Name}">
+                            <DataGridTextColumn.ElementStyle>
+                                <Style TargetType="TextBlock">
+                                    <Setter Property="TextWrapping" Value="Wrap"/>
+                                    <Setter Property="MaxWidth" Value="130"/>
+                                </Style>
+                            </DataGridTextColumn.ElementStyle>
+                        </DataGridTextColumn>
                         <DataGridTextColumn Header="Б/У" Binding="{Binding UsedValueString}"/>
                         <DataGridTextColumn Header="ФИ, паспорт владельца" Binding="{Binding OwnerFIAndPassport, Mode=OneWay}">
                             <DataGridTextColumn.ElementStyle>
