--- a/CarAccountingGibdd/CarAccountingGibdd/Pages/PagesOperator/OwnerPageOperator.xaml
+++ b/CarAccountingGibdd/CarAccountingGibdd/Pages/PagesOperator/OwnerPageOperator.xaml
@@ -79,43 +79,45 @@
 
         <!-- Область вывода информации -->
         <Grid>
+            <DataGrid Name="itemsDG">
+                <DataGrid.Columns>
+                    <DataGridTextColumn Header="ФИО" Binding="{Binding Fullname, Mode=OneWay}">
+                        <DataGridTextColumn.ElementStyle>
+                            <Style TargetType="TextBlock">
+                                <Setter Property="TextWrapping" Value="Wrap"/>
+                                <Setter Property="MaxWidth" Value="200"/>
+                            </Style>
+                        </DataGridTextColumn.ElementStyle>
+                    </DataGridTextColumn>
+                    <DataGridTextColumn Header="Дата рождения" Binding="{Binding Birthdate, StringFormat=dd.MM.yyyy}"/>
+                    <DataGridTextColumn Header="Эл. почта" Binding="{Binding EmailValue, Mode=OneWay}">
+                        <DataGridTextColumn.ElementStyle>
+                            <Style TargetType="TextBlock">
+                                <Setter Property="TextWrapping" Value="Wrap"/>
+                                <Setter Property="MaxWidth" Value="130"/>
+                            </Style>
+                        </DataGridTextColumn.ElementStyle>
+                    </DataGridTextColumn>
+                    <DataGridTextColumn Header="Телефон" Binding="{Binding Phone}"/>
+                    <DataGridTextColumn Header="Паспорт" Binding="{Binding Passport}"/>
+                    <DataGridTextColumn Header="Адрес" Binding="{Binding Address}">
+                        <DataGridTextColumn.ElementStyle>
+                            <Style TargetType="TextBlock">
+                                <Setter Property="TextWrapping" Value="Wrap"/>
+                                <Setter Property="MaxWidth" Value="130"/>
+                            </Style>
+                        </DataGridTextColumn.ElementStyle>
+                    </DataGridTextColumn>
+                    <DataGridTemplateColumn CellTemplate="{StaticResource Button.DataGrid}"/>
+                </DataGrid.Columns>
+            </DataGrid>
 
-            <!-- Контент -->
-            <Grid>
-                <!-- Контент -->
-                <DataGrid Name="itemsDG">
-                    <DataGrid.Columns>
-                        <DataGridTextColumn Header="ФИО" Binding="{Binding Fullname, Mode=OneWay}">
-                            <DataGridTextColumn.ElementStyle>
-                                <Style TargetType="TextBlock">
-                                    <Setter Property="TextWrapping" Value="Wrap"/>
-                                    <Setter Property="MaxWidth" Value="200"/>
-                                </Style>
-                            </DataGridTextColumn.ElementStyle>
-                        </DataGridTextColumn>
-                        <DataGridTextColumn Header="Дата рождения" Binding="{Binding Birthdate, StringFormat=dd.MM.yyyy}"/>
-                        <DataGridTextColumn Header="Телефон" Binding="{Binding Phone}"/>
-                        <DataGridTextColumn Header="Паспорт" Binding="{Binding Passport}"/>
-                        <DataGridTextColumn Header="Адрес" Binding="{Binding Address}">
-                            <DataGridTextColumn.ElementStyle>
-                                <Style TargetType="TextBlock">
-                                    <Setter Property="TextWrapping" Value="Wrap"/>
-                                    <Setter Property="MaxWidth" Value="130"/>
-                                </Style>
-                            </DataGridTextColumn.ElementStyle>
-                        </DataGridTextColumn>
-                        <DataGridTemplateColumn CellTemplate="{StaticResource Button.DataGrid}"/>
-                    </DataGrid.Columns>
-                </DataGrid>
-
-                <TextBlock Text="Данные о владельцах отсутствуют"
-                      Style="{StaticResource TextBlock.H6}"
-                      FontSize="18"
-                      Margin="20 80 0 0"
-                      Visibility="{Binding Items.Count, ElementName=itemsDG, 
-                      Converter={x:Static converters:IntToVisibilityConverter.Instance } }"/>
-
-            </Grid>
+            <TextBlock Text="Данные о владельцах отсутствуют"
+                       Style="{StaticResource TextBlock.H6}"
+                       FontSize="18"
+                       Margin="20 80 0 0"
+                       Visibility="{Binding Items.Count, ElementName=itemsDG, 
+                       Converter={x:Static converters:IntToVisibilityConverter.Instance } }"/>
 
         </Grid>
 
