--- a/CarAccountingGibdd/CarAccountingGibdd/Windows/AuthWindow.xaml
+++ b/CarAccountingGibdd/CarAccountingGibdd/Windows/AuthWindow.xaml
@@ -30,8 +30,8 @@
                        DockPanel.Dock="Top"/>
 
             <TextBox Margin="0 0 0 12"
-                     Tag="Логин"
-                     Name="loginTB"
+                     Tag="Электронная почта"
+                     Name="emailTB"
                      DockPanel.Dock="Top"/>
 
             <Grid DockPanel.Dock="Top"
