+ добавлены изображения у ТС
+ добавлен функционал, который позволяет просматривать изображения у авто
+ добавлен функционал, который делает кнопки недоступными, если по ним нет никакой информации

--- a/CarAccountingGibdd/CarAccountingGibdd/Dialogs/AddVehicleDialog.xaml
+++ b/CarAccountingGibdd/CarAccountingGibdd/Dialogs/AddVehicleDialog.xaml
@@ -47,10 +47,18 @@
             <TextBox DockPanel.Dock="Top"
                      Name="licensePlateTB"
                      Tag="Номерной знак (при наличии)"
-                     Margin="0 0 0 24"
+                     Margin="0 0 0 12"
                      MaxLength="6"
                      behaviors:TextBoxValidationBehavior.ValidationType="LicensePlate"/>
 
+            <Button Style="{StaticResource Button.Ordinary}"
+                    DockPanel.Dock="Top"
+                    Name="addImagesBTN"
+                    Tag="Тип ТС"
+                    Content="Добавить фото"
+                    Margin="0 0 0 24"
+                    Click="AddImages_Click"/>
+            
             <TextBox DockPanel.Dock="Top"
                      Name="markaTB"
                      Tag="Марка"
@@ -84,7 +92,7 @@
                       DisplayMemberPath="Name"
                       Name="typeCB"
                       Tag="Тип ТС"
-                      Margin="0 0 0 40"/>
+                      Margin="0 0 0 48"/>
 
             <Button Style="{StaticResource Button.Ordinary}"
                     DockPanel.Dock="Bottom"
