--- a/CarAccountingGibdd/CarAccountingGibdd/Dialogs/ChangePasswordDialog.xaml
+++ b/CarAccountingGibdd/CarAccountingGibdd/Dialogs/ChangePasswordDialog.xaml
@@ -1,14 +1,14 @@
-﻿<Window x:Class="CarAccountingGibdd.AuthWindow"
+﻿<Window x:Class="CarAccountingGibdd.Dialogs.ChangePasswordDialog"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:CarAccountingGibdd"
+        xmlns:local="clr-namespace:CarAccountingGibdd.Dialogs"
         mc:Ignorable="d"
-        
+       
         xmlns:components="clr-namespace:CarAccountingGibdd.Components"
         
-        Title="Вход в систему управления ГИБДД" 
+        Title="Смена пароля" 
         Height="700" Width="500"   
         MinHeight="600" MinWidth="450"   
         Style="{StaticResource Window.Ordinary}"
@@ -19,13 +19,13 @@
                    MaxWidth="550">
 
             <TextBlock Style="{StaticResource TextBlock.H1}"
-                       Text="Вход в аккаунт"
+                       Text="Смена пароля"
                        Padding="0 0 0 18"
                        DockPanel.Dock="Top"/>
 
             <TextBlock Style="{StaticResource TextBlock.H6}"
                        TextWrapping="Wrap"
-                       Text="Добро пожаловать в систему управления ГИБДД!"
+                       Text="Создайте новый пароль и укажите почту для смены старого пароля"
                        Margin="0 0 0 24"
                        DockPanel.Dock="Top"/>
 
@@ -45,26 +45,19 @@
                                                 Visibility="Visible"
                                                 x:Name="PassPB"/>
             </Grid>
+            
 
             <CheckBox Content="Показать пароль"
                       Name="VisPassCB"
                       Click="VisibilityPassword_Click"
                       DockPanel.Dock="Top"/>
 
-            <Button Style="{StaticResource Button.HyperLink}"
-                    Content="Забыли пароль?"
-                    DockPanel.Dock="Bottom"
-                    Click="ChangePassword_Click"/>
-
-            <Separator Margin="12"
-                       DockPanel.Dock="Bottom"/>
-            
-            <Button Content="Закрыть приложение"
+            <Button Content="Назад"
                     Click="Exit_Click"
                     Style="{StaticResource Button.Ordinary}"
                     DockPanel.Dock="Bottom"/>
 
-            <Button Content="Войти"
+            <Button Content="Создать новый пароль"
                     Margin="0 0 0 12"
                     Click="Login_Click"
                     Style="{StaticResource Button.Primary}"
